Fixed not-opening accordion tab and removed extra space about events on logged out view

--- a/static-storage/css/max-custom.css
+++ b/static-storage/css/max-custom.css
@@ -187,7 +187,7 @@ p, .about-apogee p {
 }
 
 .fans-about {
-    display: none;
+    display: none !important;
     opacity: 0;
     visibility: hidden;
 }
